--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,21 @@
 *{
-    padding: 0 auto;
-
+    padding: 0;
+    margin: 0;
 }
 body{
-
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: black;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 2px solid #000;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
