--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,22 @@ body{
     font-size: 16px;
     color: black;
 }
+#cabecera{
+    margin: 0;
+    padding: 0.5em;
+    box-shadow: 0px 5px 20px 0px rgba(6, 4, 7, 0.5);
+    background: rgb(127, 71, 180);
+    font-weight: bold;
+    color: white;
+}
+#cabecera > span{
+    padding: 0 0 0 1em; 
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 2px solid #000;
     margin: 0 auto;
@@ -18,4 +31,7 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+#post{
+    padding: 1em;
 }
