--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 body{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Courier, Helvetica, sans-serif;
     font-size: 16px;
     color: black;
 }
