--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    color: black;
+    color: blue;
 }
 #cabecera{
     margin: 0;
